test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-owned.good
init-field-dflt-nonnil-owned-from-oknil-owned.chpl:11: error: cannot initialize 'owned MyClass' from a 'owned MyClass?'
